# switchNW

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
scripts/: ctrl_pico.py  main.py  plot_data.py
src/switch_network/: __init__.py  pico_utils.py  switch.py  testing.py
switch_network/: switch.py
switch_network/tests/: __init__.py  test_switch.py
tests/: test_pico_utils.py  test_switch.py  utils.py
